crates/plotnik-tests/tests/04-emit/bytecode/fields/negated_blocks_child.txt
Q = (new_expression
  -arguments
  (arguments)
)
------------------ DIAGNOSTICS -------------------
error: `-arguments` requires `arguments` to be absent, but this `new_expression` pattern also matches `arguments`
 --> query.ptk:2:4
  |
2 |   -arguments
  |    ^^^^^^^^^
3 |   (arguments)
  |   ----------- matches `arguments` here
  |
help: drop `-arguments` or remove the `arguments` child
